--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     ports:
       - "5432:5432"
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U root -d nddb"]
+      test: ["CMD-SHELL", "pg_isready -U rooter -d mainer"]
       interval: 10s
       timeout: 5s
       retries: 10
