--- a/project/package.json
+++ b/project/package.json
@@ -19,6 +19,7 @@
     "nodemailer": "^6.9.7",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.33.0"
+    "sequelize": "^6.33.0",
+    "sqlite3": "^5.1.6"
   }
 }
