--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,9 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+# files of data
+*.csv
+
+#local db to dev verison of project
+*.sqlite
