--- a/project/package.json
+++ b/project/package.json
@@ -15,6 +15,7 @@
     "@types/connect-busboy": "^1.0.3",
     "connect-busboy": "^1.0.0",
     "cors": "^2.8.5",
+    "csv-parser": "^3.0.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
